--- a/ccnu-network-culture-festival/app/templates/main/courses.html
+++ b/ccnu-network-culture-festival/app/templates/main/courses.html
@@ -8,7 +8,7 @@
 		<div class="index_tu_box">
 			{% for course in courses %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_course', id=course.id) }}"><img src="{{ course.upload_url }}"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_course', id=course.id) }}"><img src="{{ course.img_url }}"></a></div>
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
 						<div class="index_tu_title_name"><a href="{{ url_for('main.get_course', id=course.id) }}">{{ course.present_name }}</a>
