--- a/ccnu-network-culture-festival/app/templates/main/upload.html
+++ b/ccnu-network-culture-festival/app/templates/main/upload.html
@@ -40,7 +40,7 @@
 			</div>
 
 			<div class="upload-addfile">
-                <label class="uploadfile">必填:图 片 链 接 (展示在首页的图片链接)</label>
+                <label class="uploadfile">图 片 链 接 (不填写将使用默认图片)</label>
                 <input class="upload-file-form" name="img_url">
 			</div>
 
