--- a/ccnu-network-culture-festival/app/templates/main/animes.html
+++ b/ccnu-network-culture-festival/app/templates/main/animes.html
@@ -8,7 +8,7 @@
 		<div class="index_tu_box">
 			{% for anime in animes %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_anime', id=anime.id) }}"><img src="{{ anime.upload_url }}"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_anime', id=anime.id) }}"><img src="{{ anime.img_url }}"></a></div>
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
 						<div class="index_tu_title_name"><a href="{{ url_for('main.get_anime', id=anime.id) }}">{{ anime.present_name }}</a>
