--- a/ccnu-network-culture-festival/app/templates/main/course.html
+++ b/ccnu-network-culture-festival/app/templates/main/course.html
@@ -8,8 +8,8 @@
 		</div>
 		<p class="second_description">{{ course.description }}</p>
         <div class="second_content second_media">
-					<a class="img_url" herf="{{course.video_url}}"></a>
-					<a  class="click_to_view" herf="{{course.video_url}}">点击观看</a>
+					<a class="img_url" href="{{course.video_url}}"></a>
+					<a  class="click_to_view" href="{{course.video_url}}">点击观看</a>
 				</div>
 	    <!-- 多说评论框 start -->
 	    <div class="ds-thread" data-thread-key="c{{ course.id }}" data-title="{{ course.present_name }}" data-url="{{ url_for('main.get_course', id=course.id) }}"></div>
