--- a/ccnu-network-culture-festival/app/templates/main/index.html
+++ b/ccnu-network-culture-festival/app/templates/main/index.html
@@ -2,23 +2,33 @@
 {% block title %}文化节{% endblock %}
 {% block page_content %}
 	<div class="index_banner">
-		<img class="index_banner_img" src="/static/img/banner1.png">
+		<img class="index_banner_img" src="http://ohr9krjig.bkt.clouddn.com/150-01.png">
+		<!--<img class="index_banner_img" src="/static/img/banner1.png">-->
 	</div>
+<!--
 	<div class="index_notice">
 		<div class="index_title">
+			<div class="index_tag tag1">通知</div><br>
+			<a href=www.baidu.com>百度</a>
+		<div>
+	</div>-->
+<div class="index_notice">
+		<div class="index_title">
 			<div class="index_tag tag1">通知</div>
-			<a class="index_more" href="{{ url_for('main.notices') }}">更多 ></a>
+			<!-- <a class="index_more" href="{{ url_for('main.notices') }}">更多 ></a>-->
 		</div>
 		<div class="index_notice_box">
-		{% for notice in notices %}
+
+                 <a href='http://xgb.ccnu.edu.cn/info/1032/3724.htm' target='_blank'><b>关于举办华中师范大学第四届网络创意文化节 暨网络系列作品比赛的通知</b></a>
+	<!--	{% for notice in notices %}-->
 			<div class="index_notice_content">
                 <div class="index_notice_dot"></div>
-				<a class="index_notice_time">{{ notice.a_time }}</a>
-                <div class="index_notice_line"><a href="{{ url_for('main.get_notice', id=notice.id) }}">{{ notice.name }}</a></div>
+				<a class="index_notice_time">百度</a>
+                <div class="index_notice_line"><a href="www.baidu.com">百度</a></div>
 			</div>
-		{% endfor %}
+		<!--{% endfor %}-->
 		</div>
-	</div>
+</div>
 
 	<div class="index_tu">
 		<div class="index_title">
@@ -28,7 +38,7 @@
 		<div class="index_tu_box">
 			{% for course in courses %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_course', id=course.id) }}"><img src="http://ohr9krjig.bkt.clouddn.com/whj/u.png"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_course', id=course.id) }}"><img src="{{ course.img_url }}"></a></div>
 				<!--<div class="index_tu_img"><a href="{{ url_for('main.get_course', id=course.id) }}"><img src="{{ course.upload_url }}"></a></div>-->
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
@@ -57,7 +67,7 @@
 		<div class="index_tu_box">
 			{% for photo in photos %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_photo', id=photo.id) }}"><img src="http://ohr9krjig.bkt.clouddn.com/whj/c.png"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_photo', id=photo.id) }}"><img src="{{ photo.img_url }}"></a></div>
 				<!--<div class="index_tu_img"><a href="{{ url_for('main.get_photo', id=photo.id) }}"><img src="{{ photo.first_photo }}"></a></div>-->
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
@@ -86,7 +96,7 @@
 		<div class="index_tu_box">
 			{% for anime in animes %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_anime', id=anime.id) }}"><img src="http://ohr9krjig.bkt.clouddn.com/whj/n.png"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_anime', id=anime.id) }}"><img src="{{ anime.img_url }}"></a></div>
 				<!--<div class="index_tu_img"><a href="{{ url_for('main.get_anime', id=anime.id) }}"><img src="{{ anime.upload_url }}"></a></div>-->
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
@@ -166,7 +176,7 @@
 		<div class="index_tu_box">
 			{% for startup in startups %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_startup', id=startup.id) }}"><img src="http://ohr9krjig.bkt.clouddn.com/whj/u.png"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_startup', id=startup.id) }}"><img src="{{ startup.img_url }}"></a></div>
 				<!--<div class="index_tu_img"><a href="{{ url_for('main.get_startup', id=startup.id) }}"><img src="{{ startup.upload_url }}"></a></div>-->
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
