--- a/ccnu-network-culture-festival/app/templates/main/movies.html
+++ b/ccnu-network-culture-festival/app/templates/main/movies.html
@@ -8,7 +8,7 @@
 		<div class="index_tu_box">
 			{% for movie in movies %}
 			<div class="index_tu_content">
-				<div class="index_tu_img"><a href="{{ url_for('main.get_movie', id=movie.id) }}"><img src="{{ movie.upload_url }}"></a></div>
+				<div class="index_tu_img"><a href="{{ url_for('main.get_movie', id=movie.id) }}"><img src="{{ movie.img_url }}"></a></div>
 				<div class="index_tu_info_box">
 					<div class="index_tu_info">
 						<div class="index_tu_title_name"><a href="{{ url_for('main.get_movie', id=movie.id) }}">{{ movie.present_name }}</a>
