fix: Modify the problem of front and back interaction

--- a/ccnu-network-culture-festival/app/templates/main/photo.html
+++ b/ccnu-network-culture-festival/app/templates/main/photo.html
@@ -8,7 +8,7 @@
 		</div>
 		<p class="second_description">{{ photo.description }}</p>
         <div class="second_content second_media">
-			{% for url in photo.photo_url %}
+			{% for url in photo_url %}
 				<img src="{{ url }}" class = "img_size" /></br>
 			{% endfor %}
         </div>
