--- a/ccnu-network-culture-festival/app/templates/main/upload.html
+++ b/ccnu-network-culture-festival/app/templates/main/upload.html
@@ -32,7 +32,7 @@
 			</div>
 			<div class="upload-addfile">
 				<label class="uploadfile">上 传 文 件（网文、摄影请上传附件，大小不超过30M）</label>
-				<input type="file" name="file" accept=".jpg,.jpeg,.png,.doc,.docx,.pdf" multiple="multiple" class="upload-file-form">
+				<input type="file" name="file" accept=".jpg,.jpeg,.png,.doc,.docx,.pdf,.zip" multiple="multiple" class="upload-file-form">
 			</div>
             <div class="upload-addfile">
                 <label class="uploadfile">视 频 链 接 (动漫、微视频、微课程类别请将视频上传到优酷等视频网站中，复制视频浏览器地址栏链接写入框中)</label>
